--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 		</table>
 		
 	</div>
+        <hr>
+        <div>EXAMPLE:</div>
+        <div><img src="example.PNG"/>
+        </div>
 	
 	<script>
 		var W = null;
