--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	</div>
         <hr>
         <div>EXAMPLE:</div>
-        <div><img src="example.PNG" style="width: 75wv;"/>
+        <div><img src="example.PNG" style="width: 75vw;"/>
         </div>
 	
 	<script>
