--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	</div>
         <hr>
         <div>EXAMPLE:</div>
-        <div><img src="example.PNG" style="width: 350px;"/>
+        <div><img src="example.PNG" style="width: px;"/>
         </div>
 	
 	<script>
