--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		
 	</div>
         <hr>
-        <div>EXAMPLE:</div>
+        <div><b>EXAMPLE:</b></div>
         <div><img src="example.PNG" style="width: px;"/>
         </div>
 	
