--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	</div>
         <hr>
         <div><b>EXAMPLE:</b></div>
-        <div><img src="example.PNG" style="width: px;"/>
+        <div><img src="example.PNG" style="width: 400px;"/>
         </div>
 	
 	<script>
