--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	</style>
 </head>
 <body>
+	<title>CC Wang - MLP.js</title>
 	<div class="container mycontainer">
 		<table class="table" style="text-align:center;">
 			<thead>
